src/kube/longhorn/namespace.yml
---
kind: "Namespace"
apiVersion: "v1"
metadata:
  name: "longhorn-system"
  labels:
    name: "longhorn-system"
