src/kube/longhorn/ingress.yml
---
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/add-base-url: "true"
  name: "longhorn-ingress"
  namespace: "longhorn-system"
spec:
  ingressClassName: "nginx"
  rules:
    - host: "longhorn.kube"
      http:
        paths:
          - pathType: "Prefix"
            path: "/"
            backend:
              service:
                name: "longhorn-frontend"
                port:
                  number: 80
